création héros, setup mana/flèches, correction style méthode énigme

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Geeks of Legends</title>
 </head>
 <body>
-    <script src="./public/js/jeu.js"></script>
+    <script type="module" src="./public/js/jeu.js"></script>
 </body>
 </html>
